[package]
name = "learn-libp2p"
version = "0.1.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
edition = "2018"

[dependencies]
futures = "*"
tokio = "*"
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }
tokio-stdin-stdout = "*"

[[bin]]
name = "make_tcp_transport"
path = "src/make_tcp_transport.rs"

[[bin]]
name = "make_tcp_listen"
path = "src/make_tcp_listen.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"
